# cs6120-assignments

./: .gitignore  CMakeLists.txt  README.md  branchtest.bril  branchtest_trace.bril  branchtest_trace_not_taken.bril  catalan-traced.bril  cfg.txt  collatz-traced.bril  config.toml  dumbertest.bril  dumbertestwithtrace.bril  dumbtest.bril  dumbtest_trace.bril  primes-between-trace.bril  primes-between-traced.bril  something.c  test_0.txt  test_1.txt  totient.t  totient_out.txt
benchmarks/: gen_plots.py  gen_vplots.py
benchmarks/adversarial_alloc/: alloc1.bril
benchmarks/adversarial_worklist/: gen_adv.py
benchmarks/core/: test.txt
benchmarks/lvn/: fold-comparisons.bril
benchmarks/mem/: adler32-no-free.bril
c_benchmarks/: something.c
include/: form_blocks.hpp
l2/: totient.ts
lesson11/: brili-gc.ts  brili.ts  config.toml  gc.ts
lesson12/: brili-trace.ts  generate_trace.sh  l12_results.txt  stitch_traces.cpp
lesson2/: count_branches.cpp  totient.out  turnt.toml
lesson3/: config.toml  helpers.hpp  lesson3report.md  lvn.cpp  tdce.cpp
lesson4/: config.toml  dataflow_analysis.hpp  helpers.cpp  main.cpp  report.md  test.bril
lesson5/: cfg_utils.hpp  config.toml  main.cpp
lesson6/: are_all_ssa.sh  config.toml  dominator_analysis_temp.hpp  helpers.cpp  main.cpp
lesson6_boost/: use_boost.cpp
lesson7/: basic_loop_pass.cpp  function_pass.cpp  loop_counter.cpp  report.md  rtlib.c  rtlib.cpp  rtlib.h  rtlib.hpp  run.sh  run_cpp.sh  run_ff.sh  something.c
lesson8/: actual_loop_pass.cpp  compile_baseline.sh  compile_licm.sh  compile_smarter.py  licm_pass.cpp  link_smarter.py  report.md  run.sh  run2.sh  run_ff.sh
llvm_benchmarks/: dumb_licm.c  ff.cpp  ffinput.txt  less_dumb_licm.c  something.c  something.cpp  something_else.c
minisynth/: README.md  ex2.py  ex3.py  search.py
minisynth/sketches3/: s5.txt  s6.txt
src/lib/: cfg.cpp  cfg.hpp  cfg_utils.cpp  cfg_utils.hpp  dataflow_analysis.cpp  dataflow_analysis.hpp
src/lib/analyses/: constant_prop.cpp  defined_vars.cpp
src/lib/lesson3/: helpers.cpp  helpers.hpp
src/main/: lesson3_lvn.cpp  lesson3_tdce.cpp  lesson4.cpp
vbrench/: example.toml  pyproject.toml  vbrench.py
